minor style changes

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <form>
             <div class="form-group form-inline">
               <input type="email" class="form-control" placeholder="your@email.com">
-              <button type="submit" class="btn btn-light">Notify me!</button>
+              <button type="submit" class="btn button-pink" onclick="sendEmail()">Notify me!</button>
             </div>
           </form>
         </div>
