add webkit for backdrop and modify form sopacing

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           </p>
         </div>
         <div class="coming-soon">
-          <h2>Sushipedia is coming soon</h2>
+          <h2> Coming soon...</h2>
           <form>
             <div class="form-group form-inline">
               <input type="email" class="form-control" placeholder="your@email.com">
