change some description

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="Discover the world of sushis: their history, the different fishes and recipes and use our Sushi AI recognition app to know more about the one waiting on your plate.">
+  <meta name="description" content="Discover the world of sushis: the different types of fish, recipes and cooking styles and use our Sushi AI recognition app to know more about the one waiting on your plate!">
   <title>Sushipedia</title>
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
@@ -25,7 +25,7 @@
         <div class="title">
           <h1>Sushipedia</h1>
           <p>
-            Discover the world of sushis: their history, the different fishes and recipes and use our Sushi AI recognition app to know more about the one waiting on your plate.
+            Discover the world of sushis: the different types of fish, recipes and cooking styles and use our Sushi AI recognition app to know more about the one waiting on your plate!
           </p>
         </div>
         <div class="coming-soon">
